# WavesetUGens

./: .gitignore  CMakeLists.txt  README.md  build.sh
.github/workflows/: release.yml
HelpSource/Classes/: WavesetAverage.schelp  WavesetDelete.schelp  WavesetDivide.schelp  WavesetFractal.schelp  WavesetHarmonic.schelp  WavesetInterpolate.schelp  WavesetMultiply.schelp  WavesetNorm.schelp  WavesetOmit.schelp  WavesetPitch.schelp  WavesetReorder.schelp  WavesetRepeat.schelp  WavesetReplace.schelp  WavesetReverse.schelp  WavesetShuffle.schelp  WavesetTelescope.schelp
classes/: WavesetAverage.sc  WavesetDelete.sc  WavesetDivide.sc  WavesetFractal.sc  WavesetHarmonic.sc  WavesetInterpolate.sc  WavesetMultiply.sc  WavesetNorm.sc  WavesetOmit.sc  WavesetPitch.sc  WavesetReorder.sc  WavesetRepeat.sc  WavesetReplace.sc  WavesetReverse.sc  WavesetShuffle.sc  WavesetTelescope.sc
cmake_modules/: SuperColliderCompilerConfig.cmake  SuperColliderServerPlugin.cmake
plugins/: WavesetAverage.cpp  WavesetDelete.cpp  WavesetDivide.cpp  WavesetFractal.cpp  WavesetHarmonic.cpp  WavesetInterpolate.cpp  WavesetMultiply.cpp  WavesetNorm.cpp  WavesetOmit.cpp  WavesetPitch.cpp  WavesetReorder.cpp  WavesetRepeat.cpp  WavesetReplace.cpp  WavesetReverse.cpp  WavesetShuffle.cpp  WavesetTelescope.cpp  waveset.hpp
tests/: README.md  WavesetAverage.scd  WavesetDelete.scd  WavesetDivide.scd  WavesetFractal.scd  WavesetHarmonic.scd  WavesetInterpolate.scd  WavesetMultiply.scd  WavesetOmit.scd  WavesetPitch.scd  WavesetRepeat.scd  WavesetReplace.scd  WavesetReverse.scd  WavesetShuffle.scd  WavesetTelescope.scd
